--- a/index.html
+++ b/index.html
@@ -50,7 +50,17 @@
 <br>
 <h6 id="like">Like</h6>
 <h1 id="like2">Like</h1>
-<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<br>
+<br>
+<br>
+<h6 id="qr">My Photos</h6>
+<h1 id="qr2">My Photos</h1>
+<img src="http://qrfree.kaywa.com/?l=1&s=8&d=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F" alt="medium.com" style="width:800px;height:600px;">
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 
