--- a/index.html
+++ b/index.html
@@ -48,14 +48,18 @@
 <iframe width="800" height="600" src="https://www.youtube.com/embed/videoseries?list=PL1rTK38lAaOgxhwSEh8JXkpKykuiAC-z7" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <br>
 <br>
+<br>
+<br>
 <h6 id="like">Like</h6>
 <h1 id="like2">Like</h1>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 <br>
 <br>
 <br>
-<h6 id="qr">My Photos</h6>
-<h1 id="qr2">My Photos</h1>
+<br>
+<br>
+<h6 id="qr">QRcode</h6>
+<h1 id="qr2">QRcode</h1>
 <img src="http://qrfree.kaywa.com/?l=1&s=8&d=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F" alt="medium.com" style="width:800px;height:600px;">
 <br>
 <br>
@@ -63,6 +67,81 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h6 id="qa">Q&A</h6>
+<h1 id="qa2">Q&A</h1>
+<br>
+<br>
+<br>
+<h2>1. <strong>Differences Between Web1, Web2 and Web3:</strong></h2>
+<p>
+    the main approach towards the different webs is "readable, writable & executable"
+    <title>Web 1.0</title><br>
+    It is the “readable” phrase of the World Wide Web with flat data. In Web 1.0,<br>
+    there is only limited interaction between sites and web users.<br>
+    Web 1.0 is simply an information portal where users passively receive information<br>
+    without being given the opportunity to post reviews, comments, and feedback.<br>
+    <br>
+    <title>Web 2.0</title><br>
+    It is the “writable” phrase of the World Wide Web with interactive data.<br>
+    Unlike Web 1.0, Web 2.0 facilitates interaction between web users and sites,<br>
+    so it allows users to interact more freely with each other.<br>
+    Web 2.0 encourages participation, collaboration, and information sharing.<br>
+    Examples of Web 2.0 applications are Youtube, Wiki, Flickr, Facebook, and so on.<br>
+    <br>
+    <title>Web 3.0</title><br>
+    It is the “executable” phrase of Word Wide Web with dynamic applications,<br>
+    interactive services, and “machine-to-machine” interaction.<br>
+    Web 3.0 is a semantic web which refers to the future.<br>
+    In Web 3.0, computers can interpret information like humans<br>
+    and intelligently generate and distribute useful content tailored to the needs of users.<br>
+    One example of Web 3.0 is Tivo, a digital video recorder. <br>
+    Its recording program can search the web and read what it finds to you based on your preferences.<br><br>
+</p>
+<p> taken from the internet, contact for further information.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h6 id="contact">Contact Me</h6>
+<h1 id="contact2">Contact Me</h1>
+<!--<form action="mailto:shawn@post.bgu.ac.il?subject=HTML Comments" method="post" enctype="text/plain">-->
+    <!--Comments:<br />-->
+    <!--<textarea rows="15" cols="100" name="comments"></textarea><br />-->
+
+    <!--<input type="submit" value="Send by Email" />-->
+
+<!--</form>-->
+<h2>Send e-mail to shawn@post.bgu.ac.il:</h2>
+
+<form action="mailto:shawn@post.bgu.ac.il?subject=HTML%20Comment" method="post" enctype="text/plain">
+    Name:<br>
+    <input type="text" name="name"><br>
+    E-mail:<br>
+    <input type="text" name="mail"><br>
+    Comment:<br>
+    <input type="text" name="comment" size="50"><br><br>
+    <input type="submit" value="Send">
+    <input type="reset" value="Reset">
+</form>
 
 </body>
 </html>
