--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
 <br>
 <p>Vivamus ac dignissim urna. Aliquam erat volutpat. Pellentesque at semper nibh, id sagittis erat. Sed erat augue, consequat nec mauris in, efficitur molestie est. Sed suscipit, magna vitae semper gravida, sapien metus ultricies nulla, venenatis porttitor sem elit non neque. Ut ac accumsan lacus, condimentum aliquam mi. Ut feugiat laoreet urna, ac sagittis eros condimentum vitae. Aenean dignissim, nisi et euismod dignissim, nulla dolor sodales est, ut congue purus velit ut nisi. Proin orci augue, aliquam a lacinia eget, dictum et dui. Duis viverra velit risus, a accumsan nisl porttitor vel. Quisque iaculis hendrerit velit a fringilla. Nunc suscipit blandit ex, a tincidunt sem vulputate id. In commodo urna in est varius pretium. Donec fermentum dui pharetra gravida ullamcorper. Vestibulum condimentum, dui sit amet sodales auctor, magna felis pretium nibh, a euismod ex urna eu quam.</p>
 <br>
-<br>
-<br>
 <p>Pellentesque convallis odio vel odio congue semper. Duis quis ultrices est. Nullam eros ex, volutpat non libero id, ultricies dignissim elit. Quisque eget arcu in purus aliquam commodo at eu felis. Sed posuere nec lectus sed dictum. Integer vitae tortor sapien. Fusce viverra interdum erat, ut efficitur dolor sagittis eu. Sed nec tellus leo. Nam non augue ante.</p>
-<br>
-<br>
 <br>
 <p>Nulla nisi ligula, mattis id lectus ac, molestie posuere justo. Praesent sit amet ante nisi. Aliquam dapibus turpis nec est hendrerit, at venenatis diam cursus. Nunc rutrum pretium nunc in consectetur. Aliquam aliquet ex a tincidunt hendrerit. Aliquam ac aliquam ligula, id euismod tortor. Vivamus dapibus accumsan est laoreet auctor. Vestibulum elementum enim vitae iaculis gravida.</p>
 <br>
+<p>for translation cantact me</p>
 <br>
 <h6 id="photos">My Photos</h6>
 <h1 id="photos2">My Photos</h1>
 <img src="https://cdn-images-1.medium.com/max/1600/1*ipsSDEx99ZG_YYj_4lmP2Q.jpeg" alt="medium.com" style="width:800px;height:600px;">
+<img src="https://www.irishtimes.com/polopoly_fs/1.2453158.1449152864!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="medium.com" style="width:800px;height:600px;">
 <br>
 <br>
 <br>
@@ -80,22 +78,23 @@
 <h2>1. <strong>Differences Between Web1, Web2 and Web3:</strong></h2>
 <p>
     the main approach towards the different webs is "readable, writable & executable"
-    <title>Web 1.0</title><br>
-    It is the “readable” phrase of the World Wide Web with flat data. In Web 1.0,<br>
+    <br>
+    <strong>Web 1.0</strong><br>
+    It is the "readable" phrase of the World Wide Web with flat data. In Web 1.0,<br>
     there is only limited interaction between sites and web users.<br>
     Web 1.0 is simply an information portal where users passively receive information<br>
     without being given the opportunity to post reviews, comments, and feedback.<br>
     <br>
-    <title>Web 2.0</title><br>
-    It is the “writable” phrase of the World Wide Web with interactive data.<br>
+    <strong>Web 2.0</strong><br>
+    It is the "writable" phrase of the World Wide Web with interactive data.<br>
     Unlike Web 1.0, Web 2.0 facilitates interaction between web users and sites,<br>
     so it allows users to interact more freely with each other.<br>
     Web 2.0 encourages participation, collaboration, and information sharing.<br>
     Examples of Web 2.0 applications are Youtube, Wiki, Flickr, Facebook, and so on.<br>
     <br>
-    <title>Web 3.0</title><br>
-    It is the “executable” phrase of Word Wide Web with dynamic applications,<br>
-    interactive services, and “machine-to-machine” interaction.<br>
+    <strong>Web 3.0</strong><br>
+    It is the "executable" phrase of Word Wide Web with dynamic applications,<br>
+    interactive services, and “machine-to-machine" interaction.<br>
     Web 3.0 is a semantic web which refers to the future.<br>
     In Web 3.0, computers can interpret information like humans<br>
     and intelligently generate and distribute useful content tailored to the needs of users.<br>
@@ -105,6 +104,19 @@
 <p> taken from the internet, contact for further information.</p>
 <br>
 <br>
+<h2>2. <strong>Use-Case Differences Between Web1.0 and Web3.0</strong></h2>
+<p>
+    When considering the Use-Case "Medicines' side effects"<br>
+    <strong>Web 1.0</strong><br>
+    will show side effects which were written by the admin.<br>
+    the result is that the user will be able to read only the<br>
+    last updated information gain by the admin's knowledge.<br>
+    <strong>Web 3.0</strong><br>
+    from the lecture:
+    can create medical database drug-side effects which based on more than milliards user posts<br>
+    <br>
+    for an example the website Treato made such functionality.
+</p>
 <br>
 <br>
 <br>
