--- a/index.html
+++ b/index.html
@@ -36,21 +36,25 @@
 <h6 id="photos">My Photos</h6>
 <h1 id="photos2">My Photos</h1>
 <img src="https://cdn-images-1.medium.com/max/1600/1*ipsSDEx99ZG_YYj_4lmP2Q.jpeg" alt="medium.com" style="width:800px;height:600px;">
-<img src="https://www.irishtimes.com/polopoly_fs/1.2453158.1449152864!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="medium.com" style="width:800px;height:600px;">
-<br>
-<br>
-<br>
-<br>
+<img src="https://www.irishtimes.com/polopoly_fs/1.2453158.1449152864!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="medium.com" style="width:800px;height:600px;">\
 <h6 id="playlist">My Playlist</h6>
 <h1 id="playlist2">My Playlist</h1>
 <iframe width="800" height="600" src="https://www.youtube.com/embed/videoseries?list=PL1rTK38lAaOgxhwSEh8JXkpKykuiAC-z7" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <br>
 <br>
 <br>
-<br>
 <h6 id="like">Like</h6>
 <h1 id="like2">Like</h1>
+<br>
+<h3>Like this Site on Facebook!</h3>
+<br>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F&width=450&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -61,20 +65,8 @@
 <img src="http://qrfree.kaywa.com/?l=1&s=8&d=https%3A%2F%2Fshawnseiref.github.io%2Fhtml_Ass1%2F" alt="medium.com" style="width:800px;height:600px;">
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <h6 id="qa">Q&A</h6>
 <h1 id="qa2">Q&A</h1>
-<br>
-<br>
-<br>
 <h2>1. <strong>Differences Between Web1, Web2 and Web3:</strong></h2>
 <p>
     the main approach towards the different webs is "readable, writable & executable"
@@ -117,22 +109,6 @@
     <br>
     for an example the website Treato made such functionality.
 </p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <h6 id="contact">Contact Me</h6>
 <h1 id="contact2">Contact Me</h1>
 <!--<form action="mailto:shawn@post.bgu.ac.il?subject=HTML Comments" method="post" enctype="text/plain">-->
@@ -150,10 +126,23 @@
     E-mail:<br>
     <input type="text" name="mail"><br>
     Comment:<br>
-    <input type="text" name="comment" size="50"><br><br>
+    <input type="text" name="comment" rows="7" size="50"><br><br>
     <input type="submit" value="Send">
     <input type="reset" value="Reset">
 </form>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
