--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
     <li><a href="#qa">Q&A</a></li>
     <li><a href="#contact">Contact Me</a></li>
 </ul>
-
 <h6 id="about">About Me</h6>
 <h1 id="about2">About Me</h1>
-<br>
-<br>
 <br>
 <p>Vivamus ac dignissim urna. Aliquam erat volutpat. Pellentesque at semper nibh, id sagittis erat. Sed erat augue, consequat nec mauris in, efficitur molestie est. Sed suscipit, magna vitae semper gravida, sapien metus ultricies nulla, venenatis porttitor sem elit non neque. Ut ac accumsan lacus, condimentum aliquam mi. Ut feugiat laoreet urna, ac sagittis eros condimentum vitae. Aenean dignissim, nisi et euismod dignissim, nulla dolor sodales est, ut congue purus velit ut nisi. Proin orci augue, aliquam a lacinia eget, dictum et dui. Duis viverra velit risus, a accumsan nisl porttitor vel. Quisque iaculis hendrerit velit a fringilla. Nunc suscipit blandit ex, a tincidunt sem vulputate id. In commodo urna in est varius pretium. Donec fermentum dui pharetra gravida ullamcorper. Vestibulum condimentum, dui sit amet sodales auctor, magna felis pretium nibh, a euismod ex urna eu quam.</p>
 <br>
@@ -122,15 +119,16 @@
 
 <form action="mailto:shawn@post.bgu.ac.il?subject=HTML%20Comment" method="post" enctype="text/plain">
     Name:<br>
-    <input type="text" name="name"><br>
+    <input type="text" name="name" placeholder="Type your name here"><br>
     E-mail:<br>
-    <input type="text" name="mail"><br>
+    <input type="text" name="mail" placeholder="Type your email here"><br>
     Comment:<br>
-    <input type="text" name="comment" rows="7" size="50"><br><br>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px; width: 600px"></textarea>
+    <br>
+    <!--<input type="text" name="comment" aria-rowcount="6" size="50"><br><br>-->
     <input type="submit" value="Send">
     <input type="reset" value="Reset">
 </form>
-<br>
 <br>
 <br>
 <br>
