--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <br>
     <strong>Web 3.0</strong><br>
     It is the "executable" phrase of Word Wide Web with dynamic applications,<br>
-    interactive services, and “machine-to-machine" interaction.<br>
+    interactive services, and "machine-to-machine" interaction.<br>
     Web 3.0 is a semantic web which refers to the future.<br>
     In Web 3.0, computers can interpret information like humans<br>
     and intelligently generate and distribute useful content tailored to the needs of users.<br>
@@ -104,7 +104,9 @@
     from the lecture:
     can create medical database drug-side effects which based on more than milliards user posts<br>
     <br>
-    for an example the website Treato made such functionality.
+    for an example the website
+    <a href="https://en.wikipedia.org/wiki/Treato" target="_blank" >Treato</a>
+     made such functionality.
 </p>
 <h6 id="contact">Contact Me</h6>
 <h1 id="contact2">Contact Me</h1>
@@ -135,7 +137,7 @@
 <br>
 <br>
 <br>
-<br>
+<br>ז
 <br>
 <br>
 <br>
