--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <br>
     for an example the website
     <a href="https://en.wikipedia.org/wiki/Treato" target="_blank" >Treato</a>
-     made such functionality.
+     made such functionality. (no longer available)
 </p>
 <h6 id="contact">Contact Me</h6>
 <h1 id="contact2">Contact Me</h1>
@@ -137,7 +137,7 @@
 <br>
 <br>
 <br>
-<br>ז
+<br>
 <br>
 <br>
 <br>
