--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br>
 <p>Nulla nisi ligula, mattis id lectus ac, molestie posuere justo. Praesent sit amet ante nisi. Aliquam dapibus turpis nec est hendrerit, at venenatis diam cursus. Nunc rutrum pretium nunc in consectetur. Aliquam aliquet ex a tincidunt hendrerit. Aliquam ac aliquam ligula, id euismod tortor. Vivamus dapibus accumsan est laoreet auctor. Vestibulum elementum enim vitae iaculis gravida.</p>
 <br>
-<p>for translation cantact me</p>
+<p>for translation <a href="#contact" >contact me</a></p>
 <br>
 <h6 id="photos">My Photos</h6>
 <h1 id="photos2">My Photos</h1>
@@ -90,7 +90,7 @@
     One example of Web 3.0 is Tivo, a digital video recorder. <br>
     Its recording program can search the web and read what it finds to you based on your preferences.<br><br>
 </p>
-<p> taken from the internet, contact for further information.</p>
+<p> taken from the internet,  <a href="#contact" >contact me</a> for further information.</p>
 <br>
 <br>
 <h2>2. <strong>Use-Case Differences Between Web1.0 and Web3.0</strong></h2>
